<resources>
    <string name="app_name">WebLink Mobile</string>
    
    <!-- 主页面 -->
    <string name="welcome_message">欢迎使用 WebLink Mobile</string>
    <string name="create_room">创建房间</string>
    <string name="join_room">加入房间</string>
    <string name="screen_share">屏幕共享</string>
    <string name="video_call">视频通话</string>
    <string name="settings">设置</string>
    
    <!-- 房间功能 -->
    <string name="room_id">房间ID</string>
    <string name="invitation_code">邀请码</string>
    <string name="generate_code">生成邀请码</string>
    <string name="enter_code">请输入邀请码</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="share_code">分享邀请码</string>
    <string name="scan_qr">扫描二维码</string>
    
    <!-- 屏幕共享 -->
    <string name="start_sharing">开始共享</string>
    <string name="stop_sharing">停止共享</string>
    <string name="sharing_active">正在共享屏幕</string>
    <string name="preparing_share">准备共享...</string>
    
    <!-- 视频通话 -->
    <string name="camera_switch">切换摄像头</string>
    <string name="mute_audio">静音</string>
    <string name="unmute_audio">取消静音</string>
    <string name="end_call">结束通话</string>
    
    <!-- 状态和提示 -->
    <string name="status">连接状态</string>
    <string name="connecting">正在连接...</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开连接</string>
    <string name="connection_failed">连接失败</string>
    <string name="waiting_for_peer">等待对方加入...</string>
    <string name="peer_connected">对方已加入</string>
    <string name="peer_disconnected">对方已离开</string>
    
    <!-- 权限相关 -->
    <string name="permission_required">需要权限</string>
    <string name="camera_permission_required">需要摄像头权限才能进行视频通话</string>
    <string name="mic_permission_required">需要麦克风权限才能进行语音通话</string>
    <string name="screen_permission_required">需要屏幕录制权限才能共享屏幕</string>
    <string name="grant_permission">授予权限</string>
    
    <!-- 错误信息 -->
    <string name="error_occurred">发生错误</string>
    <string name="try_again">重试</string>
    <string name="invalid_code">无效的邀请码</string>
    <string name="room_not_found">找不到房间</string>
</resources> 